[project]
name = "pdf-reasearch-assistent-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "groq>=1.2.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.5",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.0",
    "streamlit>=1.57.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]
